2009-04-16  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* help/doc/cvsanaly.texi:

	Add configuration file Chapter.
	
2009-03-30  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* help/doc/cvsanaly.texi:

	Update documentation.
	
2009-03-30  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* help/doc/cvsanaly.texi:
	* help/doc/figs/db_schema.png:

	Add an image of the database schema to the documentation.
	
2009-03-30  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* help/doc/cvsanaly.texi:

	Update documentation.
	
2009-03-29  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* NEWS:
	* pycvsanaly2/_config.py:

	Update for release 1.99.91 (2.0.0-beta2).
	
2009-03-29  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* README:

	Add Santiago Dueñas to the list of contributors.
	
2009-03-29  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* setup.py:
	* pycvsanaly2/main.py:
	* pycvsanaly2/_config.py:

	Move project metadata (PACKAGE, VERSION, etc.) to a common module
	so that it can be used by both main.py and setup.py
	
2009-03-29  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* setup.py:

	Bump RepositoryHandler requirement to 0.3.
	
2009-03-28  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* pycvsanaly2/extensions/Metrics.py:

	Optimize the metrics query by removing an unneeded join.
	
2009-03-28  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* pycvsanaly2/extensions/FilePaths.py:

	Cache the files table, and get only the new names of the renamed
	files for the given revision. It improves te performance with
	large tables.
	
2009-03-28  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* pycvsanaly2/main.py:

	Check ASAP whether the uri provided by the user points to a valid
	svn repository.
	
2009-03-27  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* pycvsanaly2/Database.py:

	Optimize the action_files view by removing an unneeded join.
	
2009-03-26  Carlos Garcia Campos  <carlosgc@gsyc.es>

	* pycvsanaly2/extensions/FileTypes.py:

	Use 'not exists' instead of 'not in' which gives little better
	performance.
	